--- a/pom.xml
+++ b/pom.xml
@@ -20,7 +20,15 @@
             <groupId>org.springframework</groupId>
             <artifactId>spring-context</artifactId>
             <version>6.0.6</version>
+        </dependency> 
+        
+        <dependency>
+            <groupId>javax.annotation</groupId>
+            <artifactId>javax.annotation-api</artifactId>
+            <version>1.3.2</version>
         </dependency>
+        <!-- Thanks for using https://jar-download.com -->
+
 
     </dependencies>
     
